    * [DATASOLR-59] - Support for LBHttpSolrServer
    * [DATASOLR-61] - Build depends on Restlet which cannot be found in declared repositories
    * [DATASOLR-68] - Support for facet.prefix
    * [DATASOLR-90] - Add custom converter for reading/wirting joda time
    * [DATASOLR-100] - Support sloppy search criteria

** New Feature
    * [DATASOLR-42] - Support for {!join
    * [DATASOLR-45] - Placeholder support for 'filters' in @Query
    * [DATASOLR-46] - Placeholder support for 'queries' in @Facet
    * [DATASOLR-60] - Support for highlighting via @Highlight annotation
    * [DATASOLR-65] - Support for non-default request handlers
    * [DATASOLR-93] - Support for soft commit
	
** Task
    * [DATASOLR-54] - Extract QueryParser Interface
    * [DATASOLR-56] - Register jodatime converters only if jodatime is in classpath
    * [DATASOLR-76] - Upgrade to commons-lang3
    * [DATASOLR-79] - SolrOperations of SolrRepositoryFactoryBean cannot be accessed
    * [DATASOLR-82] - Add MulticoreSolrServerFactory 
    * [DATASOLR-87] - Custom mapper for SolrDocument and SolrInputDocument
    * [DATASOLR-91] - Upgrade to solr 4.3.1 
    * [DATASOLR-101] - Clean up fuzzy/sloppy criteria handling
    * [DATASOLR-103] - Return Solr specific page when calling queryForPage

Release Notes - Spring Data Solr - Version 1.0.0.RC1 - 2013-02-08
-----------------------------------------------------------------

** Improvement
    * [DATASOLR-31] - Add unit to distance for spatial search

** New Feature
    * [DATASOLR-7]  - Add support for parameter 'facet.query' within FacetQuery
    * [DATASOLR-18] - Participate in Transaction
    * [DATASOLR-27] - Allow Facet Query definition via annotation
    * [DATASOLR-28] - Allow definition of fields included in result (CommonParams.FL) via @Query
    * [DATASOLR-29] - Update Partial Document
    * [DATASOLR-32] - Enable FilterQuery definition via annotation
    * [DATASOLR-34] - Allow definition of facet.query in @Facet annotation