@@ -5,3 +5,6 @@ target/
 .springBeans
 .sonar4clipse
 *.sonar4clipseExternals
+.idea
+spring-data-solr.iml
+
